Set libvlc playback cache size to 10 seconds (#461299)

The most common use-case for Elisa is to start playing something, and let it play
without jumping around. libvlc defaults to 1 seconds of cache; let's increase it
to 10 seconds to cut down on the potential for audio stutters.

BUG: 461299
23.04